# adanBorja-gear-academy

./: README.md
contracts/01-tamagotchi/: Cargo.toml
contracts/01-tamagotchi/io/: Cargo.toml
contracts/01-tamagotchi/io/src/: lib.rs
contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/: Cargo.toml
contracts/02-tamagotchi-interaction/io/: Cargo.toml
contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/: Cargo.toml
contracts/03-tamagotchi-nft/io/: Cargo.toml
contracts/03-tamagotchi-nft/io/src/: lib.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
